--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "## 1. 프로젝트 소개 웹 FE멘토링에서 FE멘토로 있지만, 서버에 흥미가 생겼고 마침 멘티들에게 단순 json파일이 아닌 직접 api통신으로 데이터를 정리하는 경험을 주고싶었다. 그래서 멘티들에게 API를 직접 개발해 제공하기로 하였다.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.3"
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
